--- a/dnd_master_bot.ipynb
+++ b/dnd_master_bot.ipynb
@@ -324,7 +324,7 @@
         "    )\n",
         "    bot.send_chat_action(message.chat.id, \"typing\")\n",
         "    text = response.choices[0].message.content\n",
-        "    history.append({\"role\": \"assistant\", \"content\": f\"{text} Какие ваши действия?\"})\n",
+        "    history.append({\"role\": \"assistant\", \"content\": f\"{text} Какие ваши действия? Вы можете использовать голосовые сообщения. \"})\n",
         "    bot.send_message(message.chat.id, text)\n",
         "    bot.send_chat_action(message.chat.id, \"upload_photo\")\n",
         "    response = client.images.generate(\n",
